# cookiecutter-pypackage-medium

./: .gitignore  README.rst  cookiecutter.json  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  Makefile  README.rst  check.sh  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/cmds/: check.sh
{{cookiecutter.project_slug}}/docs/: api_docs.rst  conf.py  index.rst  installation.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
