[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
packages = [
    { include = "{{ cookiecutter.project_slug }}" },
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">3.6"

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
coverage = "^4.5"
ipython = "*"
mypy = "^0.650.0"
pudb = "*"
pylint = "^2.2"
{% if cookiecutter.use_pytest == 'y' -%}pytest = "^4.0"
pytest-runner = "^4.2"{% endif %}
Sphinx = "^1.8"
sphinxcontrib-apidoc = "^0.3.0"
sphinxcontrib-fulltoc = "^1.2"
tox = "^3.6"
watchdog = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
