[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src"},
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.6,<4"

# Fake dependencies only used to build docs
Sphinx = { version = "^1.8", optional = true }
sphinxcontrib-apidoc = { version = "^0.3.0", optional = true }
sphinxcontrib-fulltoc = { version = "^1.2", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinxcontrib-apidoc", "sphinxcontrib-fulltoc"]

[tool.poetry.dev-dependencies]
coverage = "^4.5"
ipython = "*"
mypy = "*"
pudb = "*"
pylint = "^2.2"
{% if cookiecutter.use_pytest == 'y' -%}pytest = "^4.0"
pytest-runner = "^4.2"{% endif %}
tox = "^3.6"
watchdog = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
